tests/unit-fail/j033b.ref
Error: EIO4
Description: Trying to modify a string literal.
Type: Undefined behavior.
See also: C11 sec. 6.4.5:7
  at main(j033b.c:4)
  at <file-scope>(<unknown>)
